--- a/style/home.css
+++ b/style/home.css
@@ -80,11 +80,10 @@ a {
 
 .footer {
 	background-color: black;
-
-	justify-content: space-around;
+	display: flex;
+	justify-content: space-evenly;
 }
 
-.footer-div1,
 .footer-div2 {
 	padding-left: 40px;
 	font-size: 15px;
